[package]
name = "native"
version = "0.5.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { version = "=0.4.4", features = ["experimental-threads", "api-4-5", "register-docs"] }
godot-rust-script = { git = "https://github.com/titannano/godot-rust-script", rev = "8236e6366c2940978565b9ba2cb2def4deb60eee" }
lerp = "0.4.0"
backtrace = "0.3.64"
num = "0.4.0"
rayon = "1.10.0"
itertools = "0.10.3"
num_enum = "0.7.1"
derive-debug = "0.1.2"
thiserror = "1.0.56"
anyhow = { version = "1.0.79" }
rand = "0.9.2"
pomsky-macro = "0.11.0"
regex = "1.10.5"
kanal = { version = "0.1.1", features = ["async"] }

[lints.clippy]
pedantic = "deny"
used_underscore_items = { level = "allow", priority = 1 }

[patch.crates-io]
godot = { git = "https://github.com/godot-rust/gdext" }
godot-cell = { git = "https://github.com/godot-rust/gdext" }
godot-bindings= { git = "https://github.com/godot-rust/gdext" }
