[package]
name = "native"
version = "0.5.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { version = "0.5.0", features = ["experimental-threads", "api-4-5", "register-docs"] }
godot-rust-script = { git = "https://github.com/titannano/godot-rust-script", rev = "ca89cf182f6b9e051b66e1e52e23489e25f9077c" }
lerp = "0.4.0"
backtrace = "0.3.64"
num = "0.4.0"
rayon = "1.10.0"
itertools = "0.10.3"
num_enum = "0.7.1"
derive-debug = "0.1.2"
thiserror = "1.0.56"
anyhow = { version = "1.0.79" }
rand = "0.9.3"
pomsky-macro = "0.11.0"
regex = "1.10.5"
kanal = { version = "0.1.1", features = ["async"] }

[lints.clippy]
pedantic = "deny"
used_underscore_items = { level = "allow", priority = 1 }
